--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,14 @@
     <meta name="twitter:creator" content="@TitanStake"/>
     <meta name="twitter:title" content="Titan Stake Delegation Manager"/>
     <meta name="twitter:description" content="Join the Titans and Secure the Elrond network. Your stake is 100% secured by Elrond’s smart contract."/>
-    <meta name="twitter:image" content="https://dapp-template.elrond.com/social.png"/>
+    <meta name="twitter:image" content="https://delegate.titanstake.com/preview.png"/>
 
     <!-- Other Cards -->
     <meta property="og:url" content="https://delegate.titanstake.com"/>
     <meta property="og:type" content="business.business">
     <meta property="og:title" content="Titan Stake Delegation Manager"/>
     <meta property="og:description" content="Join the Titans and Secure the Elrond network. Your stake is 100% secured by Elrond’s smart contract."/>
-    <meta property="og:image" content="https://dapp-template.elrond.com/social.png"/>
+    <meta property="og:image" content="https://delegate.titanstake.com/preview.png"/>
 
     <title>Titan Stake Delegation Manager</title>
   </head>
