--- a/public/index.html
+++ b/public/index.html
@@ -26,32 +26,23 @@
     -->
     <!-- Social Cards -->
     <!-- Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ElrondNetwork" />
-    <meta name="twitter:creator" content="@ElrondNetwork" />
-    <meta name="twitter:title" content="Elrond dApp Template" />
-    <meta
-      name="twitter:description"
-      content="A basic implementation of @elrondnetwork/dapp providing the basics for Elrond authentication and TX signing."
-    />
-    <meta
-      name="twitter:image"
-      content="https://dapp-template.elrond.com/social.png"
-    />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@StakingAgency">
+    <meta name="twitter:title" content="Staking Agency | The smart way to manage your stakes !">
+    <meta name="twitter:description"
+          content="We operate validators on the most profitable and stable networks. Our own assets are being staked along with yours, so we are in this together. Uptime is guaranteed through our multiple failover systems. You can check this yourself by taking a look at our monitoring tool.">
+    <meta name="twitter:image" content="https://staking.agency/assets/social-preview.jpg">
 
     <!-- Other Cards -->
-    <meta property="og:url" content="https://dapp-template.elrond.com" />
-    <meta property="og:title" content="Elrond dApp Template" />
+    <meta property="og:url" content="https://delegate.staking.agency" />
+    <meta property="og:title" content="Staking Agency Delegation Manager" />
     <meta
       property="og:description"
-      content="A basic implementation of @elrondnetwork/dapp providing the basics for Elrond authentication and TX signing."
+      content="We operate validators on the most profitable and stable networks. Our own assets are being staked along with yours, so we are in this together. Uptime is guaranteed through our multiple failover systems. You can check this yourself by taking a look at our monitoring tool."
     />
-    <meta
-      property="og:image"
-      content="https://dapp-template.elrond.com/social.png"
-    />
+    <meta property="og:image" content="https://staking.agency/assets/social-preview.jpg">
 
-    <title>Elrond dApp Template</title>
+    <title>Staking Agency Delegation Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
